--- a/content.tex
+++ b/content.tex
@@ -3,8 +3,14 @@
 
 
 \textbf{Актуальность темы исследования.}
+Популярность и стремительное развитие систем дистанционного обучения и платформ для массовых открытых онлайн-курсов (MOOC) в последнее время привели к появлению огромного количества образовательных ресурсов, открытых, но практически никак не связанных между собой. В области разработки систем обучения и автоматизации образовательных процессов возникает необходимость в сборе, агрегации и повторном использовании учебных материалов различных образовательных ресурсов в контексте одной системы дистаницонного обучения. В настоящее время повторное использование учебных материалов сетевых образовательных ресурсов является одним из наиболее перспективных подходов для разработки систем дистанционного обучения. Разработка методик агрегации данных позволит создавать распределенные системы дистанционного обучения использующие учебные материалы из различных образовательных ресурсов университетов, библиотек и организаций.
 
+Одним из методов реализации повторного использования учебных материалов в системах дистанционного обучения является применение семантических технологий. Технологии Semantic Web и Linked Data позволяют системам обмениваться данными в сети с использованием онтологий и уникальных идентификаторов ресурсов URI (Uniform Resource Identifier). Системы, используя данные технологии, могут интегрировать и адаптировать данные из сторонних источников. Семантические технологии широко используются в образовательных ресурсах в большинстве развитых стран. Наиболее известным проектом в области связанных данных является инициатива Linked Universities. Linked Universities является альянсом европейских университетов распространяющих свои данные, программы, курсы и учебные материалы в формате Linked Data.
+Другим успешным примером использования семантических технологий в системе дистанционного обучения является Open University. Open University является исследовательским университетом дистанционного обучения с более чем 240 тысячами студентов. Семантические технологии используются в прикладных образовательных системах. Одной из таких систем является система SlideWiki - образовательная платформа, позволяющая составлять курсы на основе презентаций. Платформа реализует возможность повторного использования данных созданных курсов при составлении нового курса.
 
+Автоматизация сбора и агрегации учебных материалов сетевых образовательных ресурсов в системе дистанционного обучения позволяют поддерживать содержание образовательного процесса в актуальном состоянии. Пользователям системы предоставляются как одобренные и проверенные учебные материалы, так и разнообразные материалы из альтернативных источников. При росте объемов учебных материалов и автоматизации наполнения системы дистанционного обучения возникает необходимость в контроле качества и целостности учебных курсов и программ. Семантические технологии позволяют формально описывать структуру и связи объектов образовательного процесса. На основе этих связей может быть разработана методика анализа качества курса. 
+
+Действия студентов в системе дистанционного обучения могут быть связаны с описанными формально объектами образовательного процесса. Разработка методики анализа дейтельности пользователей на основе неявных связей с объектами образовательного процесса позволит преподавателям и авторам курсов получить отклик от студентов. На основе анализа качества, целостности курсов, а так же на основе откликов студентов, авторы курсов и препоаватели могут вносить коррективы в образовательный процесс с целью повышения качества обучения. Аналитическая информация деятельности студентов в системе позволит студентам оценивать и совершенствовать свои знания.     
 
 \textbf{Целью диссертационной работы} является разработка модели образовательного ресурса и алгоритмов агрегирования и анализа образовательных данных в системе дистанционного обучения с использованием методов семантической паутины. 
 
@@ -23,9 +29,9 @@
 
 \textbf{Научная новизна.}
 \begin{enumerate}
- \item Впервые ... . 
- \item Впервые ... .
- \item Впервые ... . 
+ \item Впервые разработана онтологическая модель описывающая образовательный процесс, учебные материалы, предметные области, действия студентов и отношения между данными объектами. 
+ \item Впервые разработана методика оценки качества и полноты учебного курса на основе анализа неявных семантических связей.
+ \item Впервые создан подход к автоматизированному анализу знаний и рейтингов студентов системы дистанционного обучения с использованием статистических методов и семантических технологий.
 \end{enumerate}
 
 \textbf{Основные положения, выносимые на~защиту.}
@@ -37,10 +43,11 @@
  \end{enumerate}
 
 
-
 \textbf{Практическая значимость} диссертационной работы определяется ...
 
 \textbf{Достоверность} изложенных в работе результатов обеспечивается ...
+
+
 
 \textbf{Апробация работы.}
 Основные результаты диссертационной работы докладывались и обсуждались на следующих конференциях:
@@ -48,9 +55,9 @@ International Conference on Knowledge Engineering and Semantic Web (Россия
 11th Extended Semantic Web Conference (Греция, Аниссарас, 2014), International Conference on Knowledge Engineering and Semantic Web (Россия, Казань, 2013), The 13th International Semantic Web Conference (Италия, Рива-дель-Гарда, 2014), 16th Conference of Open
 Innovations Association FRUCT (Финляндия, Оулу, 2014).
 
-Диссертационная работа была выполнена при поддержке грантов ...
+%Диссертационная работа была выполнена при поддержке грантов ...
 
-\textbf{Личный вклад.} Автор принимал активное участие ...
+%\textbf{Личный вклад.} Автор принимал активное участие ...
 
 \textbf{Публикации.} Основные результаты по теме диссертации изложены в ХХ печатных изданиях, Х из которых изданы в журналах, рекомендованных ВАК, ХХ --- в тезисах докладов.
 
@@ -58,31 +65,31 @@ Innovations Association FRUCT (Финляндия, Оулу, 2014).
 
 %\newpage
 \subsection*{\Large Содержание работы}
-Во \underline{\textbf{введении}} обосновывается актуальность исследований, проводимых в рамках данной диссертационной работы, приводится обзор научной литературы по изучаемой проблеме, формулируется цель, ставятся задачи работы, сформулированы научная новизна и практическая значимость представляемой работы.
+Во \textbf{введении} обосновывается актуальность исследований, проводимых в рамках данной диссертационной работы, приводится обзор научной литературы по изучаемой проблеме, формулируется цель, ставятся задачи работы, сформулированы научная новизна и практическая значимость представляемой работы.
 
-\underline{\textbf{Первая глава}} посвящена ...
+\textbf{Первая глава} посвящена ...
 
- картинку можно добавить так:
-\begin{figure}[h] 
-  \center
-  \includegraphics [scale=0.27] {latex}
-  \caption{Подпись к картинке.} 
-  \label{img:latex}
-\end{figure}
+%  картинку можно добавить так:
+% \begin{figure}[h] 
+%   \center
+%   \includegraphics [scale=0.27] {latex}
+%   \caption{Подпись к картинке.} 
+%   \label{img:latex}
+% \end{figure}
 
-Формулы в строку без номера добавляются так:
-$$
-  \lambda_{T_s} = K_x\frac{d{x}}{d{T_s}}, \qquad
-  \lambda_{q_s} = K_x\frac{d{x}}{d{q_s}},
-$$
+% Формулы в строку без номера добавляются так:
+% $$
+%   \lambda_{T_s} = K_x\frac{d{x}}{d{T_s}}, \qquad
+%   \lambda_{q_s} = K_x\frac{d{x}}{d{q_s}},
+% $$
 
-\underline{\textbf{Вторая глава}} посвящена исследованию 
+\textbf{Вторая глава} посвящена исследованию 
 
-\underline{\textbf{Третья глава}} посвящена исследованию 
+\textbf{Третья глава} посвящена исследованию 
 
-В \underline{\textbf{четвертой главе}} приведено описание 
+В \textbf{четвертой главе} приведено описание 
 
-В \underline{\textbf{заключении}} приведены основные результаты работы, которые заключаются в следующем:
+В \textbf{заключении}} приведены основные результаты работы, которые заключаются в следующем:
 \begin{enumerate}
  \item Результат номер один.
  \item Результат номер два.
