--- a/content.tex
+++ b/content.tex
@@ -17,28 +17,27 @@
 Для достижения поставленной цели необходимо было решить следующие \textbf{задачи}:
 \begin{enumerate}
  \item Разработать онтологические модели для описания учебных материалов, тестов, предметных областей учебных дисциплин, результатов и процесса обучения студентов, метрик оценки знаний и рейтинга студентов;
- \item Разработать методы автоматического агрегирования образовательных данных в системе дистанционного обучения с использованием методов естественной обработки языка и логического вывода и технологий Semantic Web и Linked Data;
- \item Разработать методы анализа качества и полноты образовательных материалов основанные на разборе семантических связей между объектами системы;
+ \item Разработать методику автоматического агрегирования образовательных данных в системе дистанционного обучения с использованием методов естественной обработки языка и логического вывода и технологий Semantic Web и Linked Data;
+ \item Разработать метод анализа качества и полноты образовательных материалов, основанный на разборе семантических связей между объектами системы;
   \item Разработать новый подход к автоматизированному анализу знаний и рейтингов студентов системы дистанционного обучения с использованием статистических методов и семантических технологий;
   \item Создать программно-аппаратный комплекс системы дистанционного обучения на основе разработанных методов и проанализировать полученные результаты на практике.  
  \end{enumerate}
 
 \textbf{Объектом исследования} является структура и логические отношения между объектами образовательного процесса, предметных областей учебных дисциплин и образовательных ресурсов.  
-
 \textbf{Предметом исследования} является алгоритмическое обеспечение, предназначенное для автоматизации процессов наполнения системы дистанционного обучения учебными материалами, процессов анализа качества учебных материалов и знаний студентов. 
 
 \textbf{Научная новизна.}
 \begin{enumerate}
  \item Впервые разработана онтологическая модель описывающая образовательный процесс, учебные материалы, предметные области, действия студентов и отношения между данными объектами. 
- \item Впервые разработана методика оценки качества и полноты учебного курса на основе анализа неявных семантических связей.
- \item Впервые создан подход к автоматизированному анализу знаний и рейтингов студентов системы дистанционного обучения с использованием статистических методов и семантических технологий.
+ \item Впервые разработан метод оценки качества и полноты учебного курса на основе анализа неявных семантических связей.
+ \item Впервые предложен подход к автоматизированному анализу знаний и рейтингов студентов системы дистанционного обучения с использованием статистических методов и семантических технологий.
 \end{enumerate}
 
-\textbf{Основные положения, выносимые на~защиту.}
+\textbf{Основные положения, выносимые на защиту.}
 \begin{enumerate}
  \item Модульная онтология, описывающая структуру образовательного процесса, структуру предметной обрасти учебной дисциплины, структуру тестов, действия и результаты студентов в системе дистанционного обучения.
  \item Методика наполнения образовательнной онтологии и агрегации учебных материалов в системе дистанционного обучения.
- \item Методика анализа качества и полноты учебного курса;
+ \item Метод анализа качества и полноты учебного курса;
  \item Алгоритм анализа знаний и рейтинга студентов системы дистанционного обучения.
  \end{enumerate}
 
@@ -89,13 +88,15 @@ Innovations Association FRUCT (Финляндия, Оулу, 2014).
 
 В \textbf{четвертой главе} приведено описание 
 
-В \textbf{заключении}} приведены основные результаты работы, которые заключаются в следующем:
+В \textbf{заключении} приведены основные результаты работы, которые заключаются в следующем:
 \begin{enumerate}
- \item Результат номер один.
- \item Результат номер два.
- \item Результат номер три.
-% и так далее, если нужно
-\end{enumerate}
+ \item Разработаны онтологические модели для описания учебных материалов, тестов, предметных областей учебных дисциплин, результатов и процесса обучения студентов, метрик оценки знаний и рейтинга студентов;
+ \item Разработана методика автоматического агрегирования образовательных данных в системе дистанционного обучения с использованием методов естественной обработки языка и логического вывода и технологий Semantic Web и Linked Data;
+ \item Разработан метод анализа качества и полноты образовательных материалов, основанный на разборе семантических связей между объектами системы;
+  \item Разработан новый подход к автоматизированному анализу знаний и рейтингов студентов системы дистанционного обучения с использованием статистических методов и семантических технологий;
+  \item Создан программно-аппаратный комплекс системы дистанционного обучения на основе разработанных методов и подходов;
+  \item Произведен анализ результатов работы методов и подходов полученных при прохождении группой студентов учебного курса "Интеллектуальные системы".
+  \end{enumerate}
 
 
 %\newpage
