--- a/content.tex
+++ b/content.tex
@@ -6,46 +6,53 @@
 Популярность и стремительное развитие систем дистанционного обучения и платформ для массовых открытых онлайн-курсов (MOOC) в последнее время привели к появлению огромного количества образовательных ресурсов, открытых, но практически никак не связанных между собой. В области разработки систем обучения и автоматизации образовательных процессов возникает необходимость в сборе, агрегации и повторном использовании учебных материалов различных образовательных ресурсов в контексте одной системы дистаницонного обучения. В настоящее время повторное использование учебных материалов сетевых образовательных ресурсов является одним из наиболее перспективных подходов для разработки систем дистанционного обучения. Разработка методик агрегации данных позволит создавать распределенные системы дистанционного обучения использующие учебные материалы из различных образовательных ресурсов университетов, библиотек и организаций.
 
 Одним из методов реализации повторного использования учебных материалов в системах дистанционного обучения является применение семантических технологий. Технологии Semantic Web и Linked Data позволяют системам обмениваться данными в сети с использованием онтологий и уникальных идентификаторов ресурсов URI (Uniform Resource Identifier). Системы, используя данные технологии, могут интегрировать и адаптировать данные из сторонних источников. Семантические технологии широко используются в образовательных ресурсах в большинстве развитых стран. Наиболее известным проектом в области связанных данных является инициатива Linked Universities. Linked Universities является альянсом европейских университетов распространяющих свои данные, программы, курсы и учебные материалы в формате Linked Data.
-Другим успешным примером использования семантических технологий в системе дистанционного обучения является Open University. Open University является исследовательским университетом дистанционного обучения с более чем 240 тысячами студентов. Семантические технологии используются в прикладных образовательных системах. Одной из таких систем является система SlideWiki - образовательная платформа, позволяющая составлять курсы на основе презентаций. Платформа реализует возможность повторного использования данных созданных курсов при составлении нового курса.
+Другим успешным примером использования семантических технологий в системе дистанционного обучения является Open University. Open University является исследовательским университетом дистанционного обучения с более чем 240 тысячами студентов. Семантические технологии используются в прикладных образовательных системах. Одной из таких систем является система SlideWiki - образовательная платформа, позволяющая составлять курсы на основе презентаций. Платформа реализует возможность повторного использования данных созданных курсов при составлении нового учебного курса.
 
-Автоматизация сбора и агрегации учебных материалов сетевых образовательных ресурсов в системе дистанционного обучения позволяют поддерживать содержание образовательного процесса в актуальном состоянии. Пользователям системы предоставляются как одобренные и проверенные учебные материалы, так и разнообразные материалы из альтернативных источников. При росте объемов учебных материалов и автоматизации наполнения системы дистанционного обучения возникает необходимость в контроле качества и целостности учебных курсов и программ. Семантические технологии позволяют формально описывать структуру и связи объектов образовательного процесса. На основе этих связей может быть разработана методика анализа качества курса. 
+Автоматизация сбора и агрегации учебных материалов сетевых образовательных ресурсов в системе дистанционного обучения позволяет поддерживать содержание образовательного процесса в актуальном состоянии. Пользователям системы предоставляются как одобренные и проверенные учебные материалы, так и разнообразные материалы из альтернативных источников. При росте объемов учебных материалов и автоматизации наполнения системы дистанционного обучения возникает необходимость в контроле качества и целостности учебных курсов и программ. Семантические технологии позволяют формально описывать структуру и связи объектов образовательного процесса. На основе этих связей может быть разработана методика анализа качества учебного курса. 
 
-Действия студентов в системе дистанционного обучения могут быть связаны с описанными формально объектами образовательного процесса. Разработка методики анализа дейтельности пользователей на основе неявных связей с объектами образовательного процесса позволит преподавателям и авторам курсов получить отклик от студентов. На основе анализа качества, целостности курсов, а так же на основе откликов студентов, авторы курсов и препоаватели могут вносить коррективы в образовательный процесс с целью повышения качества обучения. Аналитическая информация деятельности студентов в системе позволит студентам оценивать и совершенствовать свои знания.     
+Действия студентов в системе дистанционного обучения могут быть связаны с описанными формально объектами образовательного процесса. Разработка методики анализа дейтельности пользователей на основе неявных связей с объектами образовательного процесса позволит преподавателям и авторам курсов получить отклик от студентов. На основе анализа качества, целостности курсов, а так же на основе откликов студентов, авторы курсов и преподаватели могут вносить коррективы в образовательный процесс с целью повышения качества обучения. Аналитическая информация деятельности студентов в системе позволит студентам оценивать и совершенствовать свои знания.     
 
-\textbf{Целью диссертационной работы} является разработка модели образовательного ресурса и алгоритмов агрегирования и анализа образовательных данных в системе дистанционного обучения с использованием методов семантической паутины. 
+\textbf{Целью диссертационной работы} является разработка модели образовательного ресурса и алгоритмов агрегирования и анализа образовательных данных в системе дистанционного обучения с использованием методов семантических сетей. 
 
 Для достижения поставленной цели необходимо было решить следующие \textbf{задачи}:
 \begin{enumerate}
  \item Разработать онтологические модели для описания учебных материалов, тестов, предметных областей учебных дисциплин, результатов и процесса обучения студентов, метрик оценки знаний и рейтинга студентов;
- \item Разработать методику автоматического агрегирования образовательных данных в системе дистанционного обучения с использованием методов естественной обработки языка и логического вывода и технологий Semantic Web и Linked Data;
+ \item Разработать методику автоматического агрегирования образовательных данных в системе дистанционного обучения с использованием методов естественной обработки языка, логического вывода, технологий Semantic Web и Linked Data;
  \item Разработать метод анализа качества и полноты образовательных материалов, основанный на разборе семантических связей между объектами системы;
   \item Разработать новый подход к автоматизированному анализу знаний и рейтингов студентов системы дистанционного обучения с использованием статистических методов и семантических технологий;
   \item Создать программно-аппаратный комплекс системы дистанционного обучения на основе разработанных методов и проанализировать полученные результаты на практике.  
  \end{enumerate}
 
 \textbf{Объектом исследования} является структура и логические отношения между объектами образовательного процесса, предметных областей учебных дисциплин и образовательных ресурсов.  
+
 \textbf{Предметом исследования} является алгоритмическое обеспечение, предназначенное для автоматизации процессов наполнения системы дистанционного обучения учебными материалами, процессов анализа качества учебных материалов и знаний студентов. 
 
 \textbf{Научная новизна.}
 \begin{enumerate}
- \item Впервые разработана онтологическая модель описывающая образовательный процесс, учебные материалы, предметные области, действия студентов и отношения между данными объектами. 
+ \item Впервые разработана онтологическая модель, описывающая образовательный процесс, учебные материалы, предметные области, действия студентов и отношения между данными объектами. 
  \item Впервые разработан метод оценки качества и полноты учебного курса на основе анализа неявных семантических связей.
  \item Впервые предложен подход к автоматизированному анализу знаний и рейтингов студентов системы дистанционного обучения с использованием статистических методов и семантических технологий.
 \end{enumerate}
 
 \textbf{Основные положения, выносимые на защиту.}
 \begin{enumerate}
- \item Модульная онтология, описывающая структуру образовательного процесса, структуру предметной обрасти учебной дисциплины, структуру тестов, действия и результаты студентов в системе дистанционного обучения.
+ \item Модульная онтология, описывающая структуру образовательного процесса, структуру предметной области учебной дисциплины, структуру тестов, действия и результаты студентов в системе дистанционного обучения.
  \item Методика наполнения образовательнной онтологии и агрегации учебных материалов в системе дистанционного обучения.
  \item Метод анализа качества и полноты учебного курса;
  \item Алгоритм анализа знаний и рейтинга студентов системы дистанционного обучения.
  \end{enumerate}
 
 
-\textbf{Практическая значимость} диссертационной работы определяется ...
-
-\textbf{Достоверность} изложенных в работе результатов обеспечивается ...
-
+\textbf{Практическая значимость.}
+\begin{enumerate}
+ \item Разработаная модульная онтология опубликована в сети с зарегистрированными идентификаторами PURLs (Persistent Uniform Resource Locators) и может быть использована для разработки систем дистанционного обучения.
+ \item Программная реализация системы дистанционного обучения, использующая разработанные модели и алгоритмы, была внедрена на открытой площадке на кафедре проектирования и безопасности компьютерных систем Санкт-Петербургского национального исследовательского университета информационных технологий, механики и оптики (ecole.ifmo.ru). 
+ \item Созданы на основе разработанных моделей и алгоритмов и используются на практике онлайн курсы 
+"Интеллектуальные системы", "Физика", "Теория графов" и "Аналитическая геометрия и линейная алгебра".
+ \end{enumerate}
+ 
+ 
+%\textbf{Достоверность} изложенных в работе результатов обеспечивается ...
 
 
 \textbf{Апробация работы.}
@@ -91,11 +98,11 @@ Innovations Association FRUCT (Финляндия, Оулу, 2014).
 В \textbf{заключении} приведены основные результаты работы, которые заключаются в следующем:
 \begin{enumerate}
  \item Разработаны онтологические модели для описания учебных материалов, тестов, предметных областей учебных дисциплин, результатов и процесса обучения студентов, метрик оценки знаний и рейтинга студентов;
- \item Разработана методика автоматического агрегирования образовательных данных в системе дистанционного обучения с использованием методов естественной обработки языка и логического вывода и технологий Semantic Web и Linked Data;
+ \item Разработана методика автоматического агрегирования образовательных данных в системе дистанционного обучения с использованием методов естественной обработки языка, логического вывода, технологий Semantic Web и Linked Data;
  \item Разработан метод анализа качества и полноты образовательных материалов, основанный на разборе семантических связей между объектами системы;
   \item Разработан новый подход к автоматизированному анализу знаний и рейтингов студентов системы дистанционного обучения с использованием статистических методов и семантических технологий;
   \item Создан программно-аппаратный комплекс системы дистанционного обучения на основе разработанных методов и подходов;
-  \item Произведен анализ результатов работы методов и подходов полученных при прохождении группой студентов учебного курса "Интеллектуальные системы".
+  \item Произведен анализ результатов работы методов и подходов, полученных при прохождении группой студентов учебного курса "Интеллектуальные системы".
   \end{enumerate}
 
 
